# 3D-no-matrices

./: CMakeLists.txt  README.md  animation-app  animation.cpp  animation.mk  base.cpp  base.h  camera.cpp  camera.h  fast_list.cpp  fast_list.h  framerate.h  helper.h  noise.cpp  noise.h  platonic.cpp  platonic.h  reference_frame.h  rspace.h  shape.cpp  shape.h  vector.h
